[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player/Fireball.png" type="Texture" id=1]
[ext_resource path="res://Player/Fireball.gd" type="Script" id=2]
[ext_resource path="res://Boxes/Hitbox.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 4.0

[node name="Fireball" type="Node2D"]
script = ExtResource( 2 )
speed = 256

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = 4.71239
frames = SubResource( 5 )
frame = 2
playing = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.5, 0 )
scale = Vector2( 0.45, 0.4 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_mask = 17

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 6 )

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]

[editable path="Hitbox"]
